# basic-fuzzer

./: CHANGELOG.md  Cargo.toml  README.md
src/: cli.rs  command.rs  generate.rs  main.rs  number_range.rs
src/cli/: mod.rs  number_range.rs
src/command_impls/: fuzz.rs  mod.rs  recreate.rs
