[package]
name = "basic-fuzzer"
description = "Basic CLI fuzzer"
version = "0.1.0"
authors = ["RosieTheGhostie <rosetheghost.dev@gmail.com>"]
edition = "2024"
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/RosieTheGhostie/basic-fuzzer"

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
rand = "0.10.0"
